# SmartTp

./: AS5600.c  AS5600.h  CMakeLists.txt  Wire.c  Wire.h  app_manifest.json  main.c
AS5600/: AS5600.c  AS5600.h
Arduino/PixelRing/: Lights.ino
STL/: Base.form  Base.stl  Base_Left.stl  Base_Right.stl  LeftCap.stl  RightCap.stl  Roller.stl  Rollers.form  pull.stl
vl53l0x/: vl53l0x.c  vl53l0x.h  vl53l0x_i2c_platform.h  vl53l0x_platform.h
vl53l0x/core/src/: vl53l0x_api_calibration.c
vl53l0x/platform/src/: vl53l0x_i2c_comms.c  vl53l0x_platform.c
wire/: Wire.c  Wire.h
